@@ -184,6 +184,11 @@ to a value other than its default, <code>&quot;add&quot;</code>.</b></p>
     Defaults to true.  <em>Since Ant 1.6.2</em></td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">comment</td>
+    <td valign="top">Comment to store in the archive. <em>Since Ant 1.6.3</em></td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>fileset</h4>
